--- a/src/components/Links/Links.module.css
+++ b/src/components/Links/Links.module.css
@@ -1,5 +1,5 @@
 .ul{
-    margin: 1rem auto;
+    margin: 2rem auto;
     text-align: center;
 }
 
@@ -15,4 +15,9 @@
 
 .ul>li>a:hover{
     border-bottom: 1px solid whitesmoke;
+}
+
+.active{
+    font-weight: bold;
+    color: white;
 }
