--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
+$backgroundColor: rgb(46, 48, 48);
+
 *{
     margin: 0;
     padding: 0;
@@ -17,7 +19,7 @@ ul{
 }
 
 body{
-    background-color: rgb(46, 48, 48);
+    background-color: $backgroundColor;
 
 }
 
