--- a/src/components/Dialogs/Dialogs.module.scss
+++ b/src/components/Dialogs/Dialogs.module.scss
@@ -1,4 +1,20 @@
-.title{
+.title {
     text-align: center;
 }
 
+.list {
+    .listItem {
+        margin: 5rem 0px;
+
+        a {
+            padding: 10px 15px;
+            transition: all 0.3s linear;
+            border-radius: 10px;
+
+            &:hover {
+                background-color: whitesmoke;
+                color: black;
+            }
+        }
+    }
+}
